final project complete

--- a/FinalProject/GooglePlayBook.html
+++ b/FinalProject/GooglePlayBook.html
@@ -54,8 +54,85 @@
 					<div id="genre_container">
 						<span id="genre_text">장르</span>
 						<span id="genre_arrowicon"></span>
-					</div>
+						<div id = "action-bar-dropdown-container" style="display:none">
+							<div id = "dropdown-submenu">		
+								<ul class= "submenu-item-wrapper">
+									<li class="family">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="family" href="#"class ="leaf-submenu-link">가족 / 관계</a>
+										</div>
+									</li>
+									<li class="health">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="health" href="#" class ="leaf-submenu-link">건강 / 웰빙</a>
+										</div>
+									</li>
+									<li class="economy">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="economy" href="#" class ="leaf-submenu-link">경영 / 경제</a>
+										</div>
+									</li>
+									<li class="science">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="science" href="#" class ="leaf-submenu-link">과학 / 수학</a>
+										</div>
+									</li>
+									<li class="comic">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="comic" href="#" class ="leaf-submenu-link">만화</a>
+										</div>
+									</li>
+									<li class="literature">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="literature" href="#" class ="leaf-submenu-link">소설 / 문학</a>
+										</div>
+									</li>
+									<li class="kid">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="kid" href="#" class ="leaf-submenu-link">어린이</a>
+										</div>
+									</li>
+									<li class="travel">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="travel" href="#" class ="leaf-submenu-link">여행</a>
+										</div>
+									</li>
+									<li class="history">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="history" href="#" class ="leaf-submenu-link">역사</a>
+										</div>
+									</li>
+									<li class="art">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="art" href="#" class ="leaf-submenu-link">예술과 디자인</a>
+										</div>
+									</li>
+									<li class="language">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="language" href="#" class ="leaf-submenu-link">외국어 / 교재</a>
+										</div>
+									</li>
+									<li class="cook">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="cook" href="#" class ="leaf-submenu-link">요리 / 음료</a>
+										</div>
+									</li>
+									<li class="biography">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="biography" href="#" class ="leaf-submenu-link">인물 / 자서전</a>
+										</div>
+									</li>
+									<li class="socialogy">
+										<div class = "leaf-submenu-link-wrapper">
+											<a title="socialogy" href="#" class ="leaf-submenu-link">정치 / 사회</a>
+										</div>
+									</li>
+								</ul>
+							</div>
+						</div> 
+					</div> 
 				</li>
+
 				<li id="separating_bar">
 				</li>
 				<li id="home">
@@ -92,12 +169,12 @@
 			<div class="section">
 				<h1 class="section_header">
 					<a class="section_title" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">주간 베스트셀러</a>
-					<a class="more_button" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">더보기</a>
+					<a class="more_button" href="#">더보기</a>
 					<a class="section_subtitle" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">한 주 동안 가장 많은 사랑을 받은 도서</a>
 				</h1>
 				<div class="book_cards">
 					<ul>
-						<li>
+						<li class = "book-card-list">
 							<a href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/VvCTIS-	i28IC?fife=w170-rw">
@@ -113,7 +190,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class = "book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/yA2lAgAAQBAJ?fife=w170-rw">
@@ -129,7 +206,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class = "book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/gLCQAwAAQBAJ?fife=w170-rw">
@@ -145,15 +222,13 @@
 							</div>
 						</li>
 
-						<li>
+						<li class = "book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/m_IxAgAAQBAJ?fife=w170-rw">
 									<div class="books_hover"></div>
 								</div>
 							</a>
-							
-
 							<div class="details">
 								<a class="booktitle" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">다이어트 비밀 43가지</a>
 								<span class="paragraph_end"></span>
@@ -162,15 +237,13 @@
 							</div>
 						</li>
 
-						<li>
+						<li class = "book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/w5ovsKXL0IQC?fife=w170-rw">
 									<div class="books_hover"></div>
 								</div>
 							</a>
-							
-
 							<div class="details">
 								<a class="booktitle" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">젋은 베르테르의 슬픔</a>
 								<span class="paragraph_end"></span>
@@ -178,7 +251,6 @@
 								<a class="price" href="">₩1,500</a>
 							</div>
 						</li>
-
 					</ul>
 				</div>
 			</div>
@@ -186,12 +258,12 @@
 			<div class="section">
 				<h1 class="section_header">
 					<a class="section_title" href="">맞춤 추천</a>
-					<a class="more_button" href="">더보기</a>
+					<a class="more_button" href="#">더보기</a>
 				</h1>
 
 				<div class="book_cards">
 					<ul>
-						<li>
+						<li class="book-card-list">
 							<a href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/VvCTIS-	i28IC?fife=w170-rw">
@@ -207,7 +279,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/yA2lAgAAQBAJ?fife=w170-rw">
@@ -224,7 +296,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%BD%94%EC%9D%B4%EC%BC%80%EB%A5%98%EB%85%B8%EC%8A%A4%EC%BC%80_%EC%83%9D%EA%B0%81_%EB%B2%84%EB%A6%AC%EA%B8%B0%EC%97%B0%EC%8A%B5?id=gLCQAwAAQBAJ">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/gLCQAwAAQBAJ?fife=w170-rw">
@@ -241,7 +313,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/yA2lAgAAQBAJ?fife=w170-rw">
@@ -258,7 +330,7 @@
 							</div>
 						</li>
 
-						<li>
+						<li class="book-card-list">
 							<a class="bookcover" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">
 								<div class="cover_container">
 									<img src="https://encrypted.google.com/books/images/frontcover/yA2lAgAAQBAJ?fife=w170-rw">
@@ -277,6 +349,6 @@
 				</div>
 			</div>
 		</div>
-
+		<script type="text/javascript" src="addBookList.js"></script>
 	</body>
 </html>
