--- a/FinalProject/GooglePlayBook_m.html
+++ b/FinalProject/GooglePlayBook_m.html
@@ -18,7 +18,7 @@
 		</header>
 
 		<div id="wrapper">
-			<div class="section">
+			<div id="best" class="section">
 				<h1 class="section_header">
 					<a class="section_title" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">주간 베스트셀러</a>
 					<a class="more_button" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">더보기</a>
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 
-			<div class="section">
+			<div id="nonNovel" class="section">
 				<h1 class="section_header">
 					<a class="section_title" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">새로나온 비소설</a>
 					<a class="more_button" href="https://play.google.com/store/books/collection/promotion_1001065_toppaid_bookkr">더보기</a>
@@ -75,7 +75,7 @@
 							</div>
 							
 							<div class="details">
-								<a class="booktitle" href="https://play.google.com/store/books/details/%EC%9E%A5%ED%95%B4%EC%A0%95_%EC%96%B4%EC%84%9C%EC%99%80_%EC%97%B0%EC%95%A0%EB%8A%94_%EC%B2%98%EC%9D%8C%EC%9D%B4%EC%A7%80?id=VvCTIS-i28IC">잡담이 능력이다</a>
+								<a class="booktitle" href="#">잡담이 능력이다</a>
 								<span class="paragraph_end"></span>
 								<a class="author" href="https://play.google.com/store/books/author?id=%EC%9E%A5%ED%95%B4%EC%A0%95">사이토 다카시</a>
 								<a class="price" href="">₩9,100</a>
@@ -119,5 +119,7 @@
 				</div>
 			</footer>
 		</div>
+
+		<script type="text/javascript" src="scroll_m.js"></script>
 	</body>
 </html>
